# SoftwareRenderer

./: .gitignore  CMakeLists.txt
src/: main.cpp  math.h
